<resources>
    <string name="app_name">DietiEstates25</string>
    <string name="server_client_id">178716549373-h3n34desu00iqfn92li69efsuqmm41pq.apps.googleusercontent.com</string>
    <string name="domain_link">https://dietiestates2534865b44-34865b44-dev.auth.eu-north-1.amazoncognito.com/login?client_id=3461f54knkvjeeisce9ddp27iu&amp;response_type=code&amp;scope=aws.cognito.signin.user.admin+email+openid+phone+profile&amp;redirect_uri=myapp://callback/</string>
    <string name="image_profile">image_profile</string>
    <string name="accedi">Accedi</string>
    <string name="email">Email</string>
    <string name="inserisci_la_tua_email">Inserisci la tua email</string>
    <string name="password">Password</string>
    <string name="inserisci_la_tua_password">Inserisci la tua password</string>
    <string name="email_o_password_non_corretti">Email o Password non corretti</string>
    <string name="oppure">oppure</string>
    <string name="accedi_con_google_o_facebook">Accedi con Google o Facebook</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati</string>
    <string name="social_logo_images">social_logo_images</string>
    <string name="pagina_di_login">Pagina di login</string>
    <string name="registrati">Registrati</string>
    <string name="pagina_di_registrazione">Pagina di registrazione</string>
    <string name="image_house">image_house</string>
    <string name="search_image">search_image</string>
    <string name="cerca_il_tuo_immobile">Cerca il tuo immobile</string>
    <string name="image_slogan">image_slogan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profilo">Profilo</string>
    <string name="hai_effettuato_l_accesso_come">Hai effettuato l’accesso come:</string>
    <string name="cliente">Cliente</string>
    <string name="e_mail">E-mail:</string>
    <string name="esci">Esci</string>
    <string name="modifica_password">Modifica Password</string>
    <string name="registra_gestore">Registra Gestore</string>
    <string name="registra_a_immobiliare">Registra A. immobiliare</string>
    <string name="pagina_di_change_password">pagina_di_change_password</string>
    <string name="vecchia_password">Vecchia Password</string>
    <string name="inserisci_la_tua_vecchia_password">Inserisci la tua vecchia password</string>
    <string name="nuova_password">Nuova Password</string>
    <string name="inserisci_la_tua_nuova_password">Inserisci la tua nuova password</string>
    <string name="modifica">Modifica</string>
    <string name="password_non_corretta_o_invalida">Password non corretta o invalida</string>
    <string name="registra">Registra</string>
    <string name="image_property">image_property</string>
    <string name="sale_image">sale_image</string>
    <string name="address_image">address_image</string>
    <string name="price_image">price_image</string>
    <string name="rooms_image">rooms_image</string>
    <string name="balcony_image">balcony_image</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="prezzo">Prezzo</string>
    <string name="n_stanze">N. stanze</string>
    <string name="size_room_image">size_room_image</string>
    <string name="misura">Misura</string>
    <string name="descrizione">Descrizione</string>
    <string name="crea">Crea</string>
    <string name="bathroom_image">bathroom_image</string>
    <string name="floor_image">floor_image</string>
    <string name="n_bagni">N. bagni</string>
    <string name="piano">Piano</string>
    <string name="elevator_image">elevator_image</string>
    <string name="box_title">box_title</string>
    <string name="offerte">Offerte:</string>
    <string name="prenotazioni_visite">Prenotazioni visite:</string>
    <string name="inserisci_il_comune">Inserisci il comune</string>
    <string name="conferma">Conferma</string>
    <string name="indirizzo_non_valido">indirizzo non valido</string>
    <string name="campi_vuoti">Campi vuoti</string>
    <string name="comune">Comune</string>
    <string name="municipality_image">municipality_image</string>
    <string name="price_format">%1$.2f €</string>
    <string name="size_format">%1$.2f m²</string>
    <string name="near_location_logo">near_location_logo</string>
    <string name="fai_un_offerta">Fai un’offerta</string>
    <string name="prenota_una_visita">Prenota una visita</string>
    <string name="offerta">Offerta</string>
    <string name="invia">Invia</string>
    <string name="property_address">%1$s, %2$s</string>
    <string name="property_price">Prezzo Immobile: %1$.2f €</string>
    <string name="offerta_inviata">OFFERTA INVIATA!</string>
    <string name="logo_offer_sent">logo_offer_sent</string>
    <string name="riepilogo">Riepilogo:</string>
    <string name="torna_alla_home">Torna alla Home</string>
    <string name="offer_text">Hai offerto %1$d€ per:</string>
    <string name="property_address_text">Appartamento - %1$s %2$s</string>
    <string name="property_price_text">Prezzo precedente: €%1$d</string>
    <string name="logo_reservation">logo_reservation</string>
    <string name="date_image">date_image</string>
    <string name="gg_mm_aaaa">gg/mm/aaaa</string>
    <string name="time_image">time_image</string>
    <string name="_00_00">00:00</string>
    <string name="prosegui">Prosegui</string>
    <string name="data">Data:</string>
    <string name="orario">Orario:</string>
    <string name="meteo_giornaliero">Meteo giornaliero:</string>
    <string name="weather_image">weather_image</string>
    <string name="prenotazione_effettuata">PRENOTAZIONE EFFETTUATA!</string>
    <string name="offer_amount">€ %1$.2f</string>
    <string name="unknown_state">Stato sconosciuto</string>
    <string name="filtro">Filtro</string>
    <string name="cerca">Cerca</string>
    <string name="prezzo_max">Prezzo max</string>
    <string name="prezzo_min">Prezzo min</string>
    <string name="dimensione">Dimensione</string>
    <string name="i_miei_immobili">I miei immobili:</string>
    <string name="crea_immobile">Crea immobile</string>
    <string name="plus_button">plus_button</string>
    <string-array name="sale_rent_options">
        <item>In vendita/In affitto</item>
        <item>In vendita</item>
        <item>In affitto</item>
    </string-array>
    <string-array name="balcony_options">
        <item>Sì/No</item>
        <item>Sì</item>
        <item>No</item>
    </string-array>

</resources>