<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.UpdatePasswordFragment">

    <ImageView
            android:id="@+id/logo_image_view"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="55dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/image_profile"
            android:scaleType="fitXY"
            android:src="@drawable/account"
            android:layout_gravity="center" />

    <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/modifica_password"
            android:contentDescription="@string/pagina_di_change_password"
            android:textColor="#000000"
            android:textSize="32sp"
            android:layout_gravity="center" />

    <LinearLayout
            android:id="@+id/old_password_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E0E9"
            android:paddingVertical="11dp"
            android:paddingHorizontal="16dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/old_password_label"
                android:textColor="#49454F"
                android:textSize="12sp"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/vecchia_password" />

        <EditText
                android:id="@+id/old_password_hint"
                android:textColor="#1D1B20"
                android:textSize="16sp"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:hint="@string/inserisci_la_tua_vecchia_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:fontFamily=""/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/old_password_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#49454F"
            android:layout_marginBottom="33dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
            android:id="@+id/new_password_input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E6E0E9"
            android:paddingVertical="11dp"
            android:paddingHorizontal="16dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/new_password_label"
                android:textColor="#49454F"
                android:textSize="12sp"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/nuova_password" />

        <EditText
                android:id="@+id/new_password_hint"
                android:textColor="#1D1B20"
                android:textSize="16sp"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:hint="@string/inserisci_la_tua_nuova_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:fontFamily=""/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/new_password_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#49454F"
            android:layout_marginBottom="34dp"
            android:layout_marginHorizontal="24dp"
            android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:background="@drawable/button_style1"
            android:paddingVertical="14dp"
            android:layout_marginHorizontal="24dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

        <TextView
                android:id="@+id/change_password_button_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/modifica" />
    </LinearLayout>

    <TextView
            android:text="@string/password_non_corretta_o_invalida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:id="@+id/errorPasswordLabel"
            android:textSize="20sp"
            android:textColor="#E91E63"
            android:visibility="invisible"
            android:layout_gravity="center" />

</LinearLayout>