<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.ProfileFragment">

    <TextView
            android:id="@+id/profile_title"
            android:textColor="#000000"
            android:textSize="32sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="52dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profilo" />

    <TextView
            android:id="@+id/login_status_label"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/hai_effettuato_l_accesso_come" />

    <TextView
            android:id="@+id/role_label"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="25dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cliente" />

    <TextView
            android:id="@+id/email_label"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/e_mail" />

    <TextView
            android:id="@+id/email_value"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginBottom="59dp"
            android:layout_marginStart="24dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="esempio@esempio.com" />

    <LinearLayout
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:background="@drawable/button_style1"
            android:paddingVertical="14dp"
            android:layout_marginBottom="29dp"
            android:layout_marginHorizontal="24dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

        <TextView
                android:id="@+id/change_password_button_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/modifica_password" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/register_manager_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:background="@drawable/button_style1"
            android:paddingVertical="14dp"
            android:layout_marginBottom="29dp"
            android:layout_marginHorizontal="24dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

        <TextView
                android:id="@+id/register_manager_button_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/registra_gestore" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/register_agent_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:background="@drawable/button_style1"
            android:paddingVertical="14dp"
            android:layout_marginBottom="29dp"
            android:layout_marginHorizontal="24dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

        <TextView
                android:id="@+id/register_agent_button_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/registra_a_immobiliare" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:background="@drawable/button_style4"
            android:layout_marginHorizontal="24dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingVertical="14dp">

        <TextView
                android:id="@+id/logout_button_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/esci" />
    </LinearLayout>

</LinearLayout>