<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.Reservation1Fragment">

    <TextView
            android:id="@+id/reservation_title"
            android:textColor="#000000"
            android:textSize="32sp"
            android:layout_marginBottom="31dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/prenota_una_visita" />

    <ImageView
            android:id="@+id/reservation_image"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="134dp"
            android:contentDescription="@string/logo_reservation"
            android:src="@drawable/reservation"
            android:scaleType="fitXY" />

    <LinearLayout
            android:id="@+id/date_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="33dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="194dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/date_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/date_image"
                android:src="@drawable/calendar"
                android:scaleType="fitXY" />

        <EditText
                android:inputType="none"
                android:focusable="false"
                android:hint="@string/gg_mm_aaaa"
                android:id="@+id/date_input_field"
                android:textColor="#B3B3B3"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_field_style"
                android:paddingVertical="14dp"
                android:paddingHorizontal="16dp" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/time_picker_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="33dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="194dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/time_picker_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/time_image"
                android:src="@drawable/clock"
                android:scaleType="fitXY" />

        <LinearLayout
                android:id="@+id/time_picker_field_container"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:background="@drawable/text_field_style"
                android:paddingHorizontal="18dp"
                android:orientation="horizontal">

            <EditText
                    android:inputType="none"
                    android:focusable="false"
                    android:hint="@string/_00_00"
                    android:background="@null"
                    android:id="@+id/time_picker_input_field"
                    android:textColor="#B3B3B3"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingVertical="14dp" />

            <ImageView
                    android:id="@+id/time_picker_arrow"
                    android:layout_width="10dp"
                    android:layout_height="6dp"
                    android:src="@drawable/select_arrow"
                    android:scaleType="fitXY" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/button_style1"
            android:paddingVertical="14dp"
            android:layout_marginHorizontal="24dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

        <TextView
                android:id="@+id/continue_button_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/prosegui" />
    </LinearLayout>
</LinearLayout>