<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

    <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingHorizontal="12dp"
            android:hint="@string/inserisci_il_comune"
            android:inputType="text" />

    <TextView
            android:text="@string/indirizzo_non_valido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/error_label_address"
            android:textSize="20sp"
            android:textColor="#E91E63"
            android:visibility="invisible"
            android:layout_gravity="center" />

    <LinearLayout
            android:id="@+id/send_address_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingVertical="14dp">

        <TextView
                android:id="@+id/send_address_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/conferma" />
    </LinearLayout>
</LinearLayout>
