<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragment.HomeCustomerFragment">

    <LinearLayout
            android:id="@+id/home_banner_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curtain"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/home_banner_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/image_house"
                android:src="@drawable/home"
                android:scaleType="fitXY" />

        <LinearLayout
                android:id="@+id/search_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/button_style3"
                android:paddingVertical="25dp"
                android:layout_marginHorizontal="26dp"
                android:elevation="3dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

            <ImageView
                    android:id="@+id/search_icon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="13dp"
                    android:contentDescription="@string/search_image"
                    android:src="@drawable/magnifying_glass"
                    android:scaleType="fitXY" />

            <TextView
                    android:id="@+id/search_text"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/cerca_il_tuo_immobile" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
            android:id="@+id/slogan_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_slogan"
            android:src="@drawable/slogan"
            android:scaleType="fitXY" />

</LinearLayout>