<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.Reservation2Fragment">

    <TextView
            android:id="@+id/reservation_title"
            android:textColor="#000000"
            android:textSize="32sp"
            android:layout_marginBottom="31dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/prenota_una_visita" />

    <ImageView
            android:id="@+id/reservation_image"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginBottom="41dp"
            android:layout_marginHorizontal="134dp"
            android:src="@drawable/reservation"
            android:scaleType="fitXY" />

    <LinearLayout
            android:id="@+id/date_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="199dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/date_label"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginEnd="24dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/data" />

        <TextView
                android:id="@+id/date_value"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/time_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="60dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="236dp"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/time_label"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_marginEnd="34dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/orario" />

        <TextView
                android:id="@+id/time_value"
                android:textColor="#000000"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="" />
    </LinearLayout>

    <TextView
            android:id="@+id/weather_label"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginBottom="42dp"
            android:layout_marginStart="25dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/meteo_giornaliero" />

    <LinearLayout
            android:id="@+id/weather_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/card1"
            android:paddingVertical="28dp"
            android:layout_marginBottom="43dp"
            android:layout_marginHorizontal="24dp"
            android:elevation="3dp"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="144dp"
                android:layout_height="144dp"
                android:layout_marginEnd="7dp"
                android:contentDescription="@string/weather_image"
                android:src="@drawable/sun"
                android:scaleType="fitXY" />

        <TextView
                android:id="@+id/weather_temperature"
                android:textColor="#000000"
                android:textSize="48sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="@drawable/button_style1"
            android:paddingVertical="14dp"
            android:layout_marginHorizontal="24dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

        <TextView
                android:id="@+id/confirm_button_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/conferma" />
    </LinearLayout>
</LinearLayout>